messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
      - name: messaging-app
        image: tonnyderrick/messaging_app:latest  
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
